add tzinfo-data to gemfile

--- a/gemfiles/Gemfile.rails.5.0.1
+++ b/gemfiles/Gemfile.rails.5.0.1
@@ -7,6 +7,7 @@ gem 'grape'
 gem 'grape-kaminari', :github => 'alexey-klimuk/grape-kaminari'
 gem 'grape-swagger'
 gem 'nokogiri'
+gem 'tzinfo-data'
 gem 'coveralls', require: false
 
 group :development,:test do
